/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package model.SystemAdmin;

import model.UserAccount.UserAccount;

/**
 *
 * @author sakshi
 */
public class SystemAdmin extends UserAccount{
    
    public SystemAdmin(String username, String userpassword) {
        super(username, userpassword);
    }
    
}
